Added some buttons and a header

--- a/index.html
+++ b/index.html
@@ -23,4 +23,25 @@
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
     </head>
     <body>
+      <div class="container">
+      <div class="page-header">
+  <h1>UT season schedule <small>2015-2016 season</small></h1>
+  <div class="panel panel-default">
+  <div class="panel-heading">Panel heading without title</div>
+  <div class="panel-body">
+    Panel content
+  </div>
+</div>
+
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title">Panel title</h3>
+  </div>
+  <div class="panel-body">
+    Panel content
+  </div>
+  <script src=""
+</div>
+</div>
+    </body>
 </html>
