--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
           <p>The Texas Longhorns football program is the intercollegiate team representing The University of Texas at Austin (variously Texas or UT) in the sport of American football. The Longhorns compete in the NCAA Division I Football Bowl Subdivision (formerly Division I-A) as a member of the Big 12 Conference. The team is coached by Charlie Strong and home games are played at Darrell K Royal – Texas Memorial Stadium in Austin, Texas.</p>
         </div>
       </div>
+        <div class= "col-xs-12 col-sm-6 col-md-8">
         <h3>Season schedule</h3>
         <ul>
           <li>at Notre Dame</li>
@@ -50,12 +51,26 @@
           <li>vs. Texas Tech</li>
           <li>at Baylor</li>
         </ul>
+      </div>
+      <div class= "col-xs-12 col-sm-6 col-md-8">
+        <h3>Rankings</h3>
+        <ol>
+          <li>vs. Oklahoma State</li>
+          <li>at TCU</li>
+          <li>at Oklahoma</li>
+          <li>vs. Kansas State</li>
+          <li>at Iowa State</li>
+          <li>vs. Kansas</li>
+          <li>at West Virginia</li>
+          <li>vs. Texas Tech</li>
+          <li>at Baylor</li>
+        </ol>
+      </div>
         <div class="panel panel-default">
           <div class="panel-heading">
-            <h3 class="panel-title">Rankings</h3>
+            <h3 class="panel-title"></h3>
           </div>
           <div class="panel-body">
-            Basic panel example
           </div>
         </div>
       </div>
